# copilot-taller01

./: README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  config.py  main.py  models.py
backend/tests/: test_api.py
frontend/: .env.example  README.md  index.html
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/pages/: Login.jsx  Login.module.css  Welcome.jsx  Welcome.module.css
frontend/src/utils/: auth.js
